# llm-wiki

./: .gitignore  .llmwiki-synth-state.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE-NOTES-v1.2.0.md  SECURITY.md  action.yml  build.bat  build.sh  docker-compose.yml  flake.nix  lychee.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  serve.bat  serve.sh  setup.bat  setup.sh  sync.bat  sync.sh
.claude/commands/: maintainer.md  release.md  review-pr.md  triage-issue.md  wiki-all.md  wiki-candidates.md  wiki-export-marp.md  wiki-synthesize.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml  synthetic-failure-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  feature_request.yml
.github/workflows/: agents-e2e.yml  agents-healer.yml  ci.yml  claude-code-review.yml  claude.yml  cross-browser.yml  docker-publish.yml  e2e.yml  homebrew-bump.yml  link-check.yml  llmwiki-action.yml  pages.yml  pr-lint.yml  regen-screenshots.yml  release-drafter.yml  release.yml  synthetic.yml  wiki-checks.yml
docs/: UPGRADING.md  accessibility-report.md  adapter-authoring.md  api-guide.md  benchmarks.md  cheatsheet.md  competitor-landscape.md  configuration-reference.md  faq.md  feature-matrix.md  framework.md  getting-started.md  index.md  monthly-report-template.md  multi-agent-setup.md  obsidian-integration.md  playground.md  public-roadmap.md  roadmap.md  scheduled-sync.md  seo.md  star-history.md  style-guide.md  troubleshooting.md  uptime.md
docs/adapters/: chatgpt.md  copilot.md  cursor.md  gemini-cli.md  jira.md  meeting.md  obsidian.md  opencode.md
docs/content-drafts/: awesome-list-pr.md  before-after.md  blog-comparison.md  blog-launch.md  blog-multi-agent.md  blog-static-site.md  blog-technical-deepdive.md  blog-tutorial.md  newsletter-pitch.md  product-hunt.md  show-hn.md  slide-deck-outline.md  social-linkedin-launch.md  social-linkedin-sessions.md  social-templates.md  social-twitter-launch.md  social-twitter-technical.md  talk-abstract.md
docs/deploy/: docker.md  github-pages.md  homebrew-setup.md  pypi-publishing.md  vercel-netlify.md
docs/i18n/: README.md
docs/maintainers/: ADR-001-playwright-stack.md  ARCHITECTURE.md  DECLINED.md  README.md  RELEASE_PROCESS.md  REVIEW_CHECKLIST.md  ROADMAP.md  TRIAGE.md  playwright-agents-bootstrap.md
docs/modes/: index.md
docs/reference/: cache-tiers.md  cli.md  entity-schema.md  reader-api.md  reader-shell.md  slash-commands.md  ui.md
docs/testing/: visual-regression.md
docs/tutorials/: 00-quickstart-walkthrough.md  01-installation.md  02-first-sync.md  03-use-with-claude-code.md  04-use-with-codex-cli.md  05-querying-your-wiki.md  06-bring-your-obsidian-vault.md  07-example-workflows.md  08-synthesize-with-ollama.md  setup-guide.md
docs/videos/: cli-tutorial.tape
examples/: sessions_config.json  wiki_dashboard.md
examples/obsidian-templates/: README.md  concept-template.md  entity-template.md  source-template.md  synthesis-template.md
examples/scheduled-sync-templates/: README.md  launchd.plist  llmwiki-sync-task.xml  llmwiki-sync.service  llmwiki-sync.timer
examples/scripts/: README.md  tree_from_graph.py
homebrew/: llmwiki.rb
integrations/: README.md
integrations/alfred/: README.md  info.plist  search.py
integrations/obsidian/: README.md  main.ts  manifest.json
integrations/raycast/: README.md  package.json
integrations/vscode/: README.md  package.json
integrations/webhook/: README.md  handler.py
llmwiki/: __init__.py  _frontmatter.py  _system_pages.py  adapter_config.py  build.py  cache.py  candidates.py  categories.py  changelog_timeline.py  cli.py  config_schedule.py  context_md.py  convert.py  docs_pages.py  export_jupyter.py  export_marp.py  exporters.py  graph.py  graphify_bridge.py  ingest_queue.py  link_checker.py  log_reader.py  models_page.py  obsidian_output.py  pipeline.py  project_topics.py  prototypes.py  quarantine.py  queue.py  schema.py  search_facets.py  search_tree.py  serve.py  skill_installer.py  tag_utils.py  tags.py  visual_baselines.py  viz_tokens.py  viz_tools.py  watch.py
llmwiki/adapters/: __init__.py  base.py  claude_code.py  codex_cli.py  jira_adapter.py  meeting.py  pdf.py  status.py
llmwiki/lint/: __init__.py  rules.py
llmwiki/mcp/: server.py
llmwiki/render/: __init__.py  css.py  docs_css.py  js.py
llmwiki/sync/: __init__.py  status.py
llmwiki/synth/: base.py  cli_helpers.py  estimate.py  ollama.py  pipeline.py
scripts/: add_missing_metadata.py  bump-homebrew-formula.sh  demo-record.sh  fix_model_metadata.py  fix_session_titles.py  healer-comment.js  normalize_wikilinks.py  record_demo.py  regen_docs_screenshots.py  update-visual-baselines.sh
specs/: README.md  docs-hub.md  docs-page.md  graph.md  home.md  project-detail.md  projects-index.md  session-detail.md  sessions-index.md  theme-toggle.md
tests/: perf-budgets.json  test_activity_timeline_label.py  test_adapter_config.py  test_adapter_graduation.py  test_adapter_is_available_unified.py  test_adapter_tag.py  test_adapters.py  test_alfred_search.py  test_backlinks.py  test_cache.py  test_cache_tiers.py  test_candidates.py  test_categories.py  test_chatgpt_adapter.py  test_chip_contrast.py  test_ci_workflow.py  test_cli.py  test_cli_doc_parity.py  test_cli_observability.py  test_cmd_all_parser.py  test_cmd_graph_fallback.py  test_collision_retry.py  test_completion.py  test_context_md.py  test_convert.py  test_convert_no_op_perf.py  test_copilot_adapters.py  test_cross_platform_paths.py  test_dashboard.py  test_default_redaction.py  test_docs_structure.py  test_edge_cases.py  test_export_jupyter.py  test_export_marp.py  test_export_qmd.py  test_filter_slug_label.py  test_flat_naming.py  test_force_counters.py  test_frontmatter_consolidation.py  test_frontmatter_shared.py  (+82 more)
tests/agents/: seed.spec.ts
tests/e2e/: conftest.py  findings.md  test_axe_a11y.py  test_axe_a11y_broadened.py  test_build_artifacts.py  (+13 more)
wiki/: CRITICAL_FACTS.md  index.md  overview.md
(+62 files in other folders)
